# pbsm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_zh.md
adapters/tool_adapter/: pyproject.toml
adapters/tool_adapter/pbsm_tool_adapter/: __init__.py  config.py  events.py  invocation.py  pbsm_bindings.py  tool_adapter.py  tool_registry.py  types.py
adapters/tool_adapter/pbsm_tool_adapter/parsers/: __init__.py  base_parser.py  csv_parser.py  error_parser.py  html_parser.py  json_parser.py  text_parser.py
adapters/tool_adapter/tests/: conftest.py  test_config.py  test_cross_layer_integration.py  test_csv_parser.py  test_error_parser.py  test_events.py  test_html_parser.py  test_integration.py  test_invocation.py  test_json_parser.py  test_text_parser.py  test_tool_adapter.py  test_tool_registry.py  test_types.py
crates/pbsm-core/: Cargo.toml
crates/pbsm-core/benches/: pbsm_benchmarks.rs
crates/pbsm-core/src/: error.rs  event_bus.rs  lib.rs  orchestrator.rs
crates/pbsm-core/src/modules/: mod.rs
crates/pbsm-core/src/modules/belief_graph/: error.rs  fusion.rs  graph.rs  mod.rs  operations.rs  operations_async.rs  snapshot.rs  types.rs
crates/pbsm-core/src/modules/common/: mod.rs
crates/pbsm-core/src/modules/communication/: error.rs  mod.rs  types.rs
crates/pbsm-core/src/modules/communication/conflict/: detector.rs  mod.rs  negotiation.rs
crates/pbsm-core/src/modules/communication/delegation/: manager.rs  mod.rs
crates/pbsm-core/src/modules/communication/security/: access_control.rs  filter.rs  mod.rs
crates/pbsm-core/src/modules/communication/snapshot/: constructor.rs  filter.rs  fusion.rs  mod.rs  parser.rs  serialization.rs
crates/pbsm-core/src/modules/communication/sync/: manager.rs  mod.rs  state_machine.rs
crates/pbsm-core/src/modules/intention_stack/: checkpoint.rs  config.rs  drift.rs  error.rs  events.rs  manager.rs  mod.rs  operations.rs  state.rs  types.rs
crates/pbsm-core/src/modules/memory/: cleanup.rs  config.rs  error.rs  events.rs  mod.rs  store.rs  types.rs
crates/pbsm-core/src/modules/memory/cache/: lru.rs  mod.rs
crates/pbsm-core/src/modules/memory/layers/: experience.rs  mod.rs  raw_log.rs  snapshot.rs
crates/pbsm-core/src/modules/memory/retrieval/: by_context.rs  by_problem.rs  by_topic.rs  mod.rs
crates/pbsm-core/src/modules/memory/storage/: mod.rs  sled_kv.rs  sqlite.rs  transaction.rs
crates/pbsm-core/src/modules/metacognition/: anomaly_detection.rs  attention.rs  config.rs  controller.rs  error.rs  events.rs  forgetting.rs  mod.rs  types.rs  value_evaluation.rs
crates/pbsm-core/src/modules/prediction_engine/: generator.rs  mod.rs  pool.rs  residual_calculator.rs  state_machine.rs  verifier.rs
crates/pbsm-core/src/types/: filter.rs  mod.rs  prediction.rs  residual.rs
crates/pbsm-core/tests/: belief_memory_integration.rs  belief_prediction_integration.rs  communication_integration.rs  e2e_workflow.rs  intention_belief_meta_integration.rs  prediction_metacognition_integration.rs
crates/pbsm-core/tests/integration_common/: mock_event_bus.rs  mod.rs
crates/pbsm-python/: Cargo.toml  pyproject.toml
crates/pbsm-python/src/: lib.rs
demo/: DEMO_REPORT.md  comprehensive_demo.py  deepseek_pbsm_demo.py  test_comprehensive.py  test_demo.py
docs/: architecture_en.html  architecture_zh.html  dataflow_en.html  dataflow_zh.html  deployment_en.html  deployment_zh.html  integration_en.html  integration_zh.html  multi-agent_en.html  multi-agent_zh.html
(+2 files in other folders)
