[workspace]
resolver = "2"
members = [
    "crates/pbsm-core",
    "crates/pbsm-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PBSM Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
async-trait = "0.1"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
sled = "0.34"
lz4_flex = "0.11"
zstd = "0.13"
toml = "0.8"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
