[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pbsm-python"
version = "1.0.0"
description = "PBSM Predictive Belief State Machine - Python bindings"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.maturin]
features = ["pyo3/extension-module"]
